Update Simulação de App

--- a/AppQKD.ipynb
+++ b/AppQKD.ipynb
@@ -16,7 +16,7 @@
     "# Componentes básicos da rede\n",
     "from components import Network, Controller\n",
     "# Funções auxiliares para executar as aplicações\n",
-    "from components.qkd.apps_functions import *"
+    "from components.qkd.app import *"
    ]
   },
   {
